<resources>
    <string name="app_name">ABCD Bank Onboarding</string>
    <string name="txt_welcome">MOBILE\nFIRST\nBRANCH</string>
    <string name="txt_user_name">User Name</string>
    <string name="txt_user_password">Password</string>
    <string name="login">Login</string>
    <string name="rel_manager">Relationship Manager</string>
    <string name="personal_adv">Personal Banker + Financial Advisor</string>
    <string name="branch_manager">Branch Manager</string>
    <array name="role">
        <item name="select">Select your Role</item>
        <item name="rel_manager">@string/rel_manager</item>
        <item name="personal_adv">@string/personal_adv</item>
        <item name="branch_manager">@string/branch_manager</item>
    </array>
    <array name="role_personal">
        <item name="personal_adv">Personal Banker</item>
        <item name="rel_manager">@string/rel_manager</item>
        <item name="branch_manager">@string/branch_manager</item>
    </array>
    <string name="calendar">Calendar</string>
    <string name="email">Email</string>
    <string name="staffing">Staffing</string>
    <string name="performance">Performance</string>
    <string name="companystocks">Company,Stocks or News</string>
    <string name="branchmanager">Logged in as BM</string>
    <string name="personalBanker">Logged in as PB</string>
    <string name="accountopening">Mortgage Application</string>
    <string name="crm">CRM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard"> Dashboard</string>
    <string name="error_message">Required</string>
    <string name="accountopen_page">I am in Account Open Page</string>
    <string name="crm_page">I am in CRM Page</string>
    <string name="crmsummary_page">I am in CRM Summary Page</string>
    <string name="electronic_queue">I am in Electronic Queue Page</string>
    <string name="email_page">I am in Email Page</string>
    <string name="fast_check_page">I am in Fast Check Deposit Page</string>
    <string name="motgage_form">Mortgage form was submitted successfully</string>
    <string name="performance_page">I am in Performance page</string>
    <string name="staffing_page">I am in Staffing page</string>
    <string name="company_stocks_page">I am in Company,News and Stocks Page</string>
    <string name="mobileapp_page">I am in using Mobile App Page</string>
    <string name="applicant_details">Applicant Details</string>
    <string name="current_address">Current Address</string>
    <string name="signature">Signature</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="mandatory">* - Mandatory fields are required</string>
    <string name="previous_add">Previous Address</string>
    <string name="lessthanthree">(Complete only if less than 3 years at current address)</string>
    <string name="mortgage_application">Mortgage Application</string>
    <string name="bank_name">ABCD Bank Mortgage Department</string>
    <string name="bank_address">304 W park avenue,Panama,Columbus,OH-63049</string>
    <string name="bank_phone">Telephone: 456-434-3335 | Fax: 456-908-7897</string>
    <string name="salutation">Salutation</string>
    <string name="firstname">FirstName*</string>
    <string name="initial">Initial</string>
    <string name="lastname">LastName*</string>
    <string name="birthdate">BirthDate*</string>
    <string name="ssn">SSN(Optional)</string>
    <string name="martialstatus">MartialStatus</string>
    <string name="work_no">WorkNumber</string>
    <string name="cell_no">CellNumber*</string>
    <string name="home_no">HomeNumber</string>
    <string name="email_add">EmailAddress*</string>
    <string name="contact_method">ContactMethod</string>
    <string name="dependents">Dependents</string>
    <string name="apt_no">Apt #</string>
    <string name="streetname">Street # and Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode*</string>
    <string name="status">Status</string>
    <string name="rentpay">Rent Payment</string>
    <string name="time_at_residence">Time at Residence:</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="insurance">Existing Insurance Coverage</string>
    <string name="life_insurance">Life Insurance*</string>
    <string name="disability_in">Disabiltity Insurance</string>
    <string name="critical_in">Critical Illiness Insurance</string>
    <string name="suffix">Suffix</string>
    <string name="name">Name</string>
    <string name="mi">MI</string>
    <string name="last_name">Last Name</string>
    <string name="e_sign">e-signature</string>

    <string-array name="gender_selection">
        <item>Mr</item>
        <item>Miss</item>
        <item>Mrs</item>
    </string-array>
    <string-array name="arry_months">
        <item>Month</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
