...
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInstruct">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spRole"
                selectedValue="@={viewmodel.text}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/common_margin"
                android:background="@android:color/white"
...
                android:layout_toRightOf="@+id/spRole"
                android:elevation="10dp"
                android:src="@drawable/ic_dropdown_arrow" />
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:minWidth="@dimen/min_width"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
...
                android:singleLine="true"
                android:text="@={viewmodel.strUserName}"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/min_width"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputUserName">
...
                android:singleLine="true"
                android:text="@={viewmodel.strUserPassword}"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:textColor="@android:color/black"
            android:background="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:onClick="@{viewmodel::onLogin}"
...
