<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/work_num"
        android:layout_width="@dimen/form_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_marginstart"
        app:layout_constraintEnd_toStartOf="@id/cell_num"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/work_no"
            android:background="@drawable/border"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cell_num"
        android:layout_width="@dimen/form_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_marginstart"
        app:layout_constraintEnd_toStartOf="@id/home_num"
        app:layout_constraintStart_toEndOf="@+id/work_num">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/cellno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/cell_no"
            android:background="@drawable/border"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/cell_errormsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_message"
        android:textColor="@color/red_500"
        android:textSize="@dimen/mortform_text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/cell_num"
        app:layout_constraintStart_toStartOf="@id/cell_num"
        app:layout_constraintTop_toBottomOf="@id/cell_num" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/home_num"
        android:layout_width="@dimen/form_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_marginstart"
        app:layout_constraintEnd_toStartOf="@id/email_address"
        app:layout_constraintStart_toEndOf="@id/cell_num">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/home_no"
            android:background="@drawable/border"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_address"
        android:layout_width="@dimen/form_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_marginstart"
        app:layout_constraintEnd_toStartOf="@id/contact_method"
        app:layout_constraintStart_toEndOf="@+id/home_num">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailadd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/email_add"
            android:background="@drawable/border"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/email_errormsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_message"
        android:textColor="@color/red_500"
        android:textSize="@dimen/mortform_text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/email_address"
        app:layout_constraintStart_toStartOf="@id/email_address"
        app:layout_constraintTop_toBottomOf="@id/email_address" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/contact_method"
        android:layout_width="@dimen/form_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_marginstart"
        app:layout_constraintEnd_toStartOf="@id/dependents"
        app:layout_constraintStart_toEndOf="@+id/email_address">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/contact_method"
            android:background="@drawable/border"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dependents"
        android:layout_width="@dimen/form_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_marginstart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contact_method">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/dependents"
            android:background="@drawable/border"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>