...

    <android.support.design.widget.TextInputLayout
        android:id="@+id/apt_no"
        android:layout_width="@dimen/form_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_marginstart"
        app:layout_constraintEnd_toStartOf="@id/street_name"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
...
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_marginstart"
        app:layout_constraintEnd_toStartOf="@id/status"
        app:layout_constraintStart_toEndOf="@+id/state">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/zip_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/zipcode"
            android:background="@drawable/border"
            android:inputType="number"
...
